[project]
name = "mcp-robinhood"
version = "0.1.0"
description = "Read-only MCP server for Robinhood portfolio data"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["mcp", "robinhood", "portfolio", "finance"]

dependencies = [
    "robin-stocks>=3.4.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "anyio>=4.12.0",
    "cachetools>=6.2.0",
    "requests>=2.32.0",
    "loguru>=0.7",
    "hvac>=2.4.0",
    "pyotp>=2.9.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.0",
]

[project.urls]
"Homepage" = "https://github.com/maskar/mcp-robinhood"
"Source Code" = "https://github.com/maskar/mcp-robinhood"
"Upstream" = "https://github.com/Open-Agent-Tools/open-stocks-mcp"

[project.scripts]
mcp-robinhood = "mcp_robinhood.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_robinhood"]

[tool.hatch.build.sources]
"src" = ""

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
